# echo-OS

./: .dockerignore  .env.example  .env.jarvis.example  .gitignore  Cargo.toml  Dockerfile  README.md  app.js  docker-compose.yml  index.html  main.py  package-lock.json  package.json  requirements.txt
Downloads/jarvis-vish-branch/jarvis_rs/: Cargo.toml
Downloads/jarvis-vish-branch/jarvis_rs/src/: agent.rs  automation.rs  calendar.rs  main.rs  speech.rs
Downloads/jarvis-vish-branch/jarvis_rs/src/llm/: prompt.rs  provider.rs
IntoYourPrime/: .env.example  CONVENTIONS.md  index.html
LearnCarnivorousPlants/: app.js  index.html
backend/: README.md  main.py  pyproject.toml
backend/app/: __init__.py  config.py  server.py
backend/app/agent/: graph.py  prompts.py  runtime.py  state.py
backend/app/api/: schemas.py
backend/app/demo/: __init__.py  runtime.py
backend/app/integrations/: google_workspace.py  openai_client.py
backend/app/memory/: __init__.py  short_term.py  store.py
backend/app/tools/: __init__.py  base.py  registry.py
backend/app/tools/builtin/: __init__.py  app_control.py  browser.py  calendar.py  code_analysis.py  communications.py  desktop.py  email.py  filesystem.py  macos_automation.py  macos_ui.py  terminal.py
backend/app/utils/: logging.py  paths.py
backend/app/voice/: __init__.py  broker.py  manager.py  normalization.py  stt.py  tts.py  wakeword.py
backend/backend/chroma/: chroma.sqlite3
backend/echo_os_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_hardcoded_demo.py
browser_sidecar/: package-lock.json  package.json  server.mjs
desktop/: main.ts  package.json  preload.ts  tsconfig.json
frontend/: index.html  package.json  tailwind.config.ts
jarvis_rs/: Cargo.toml
jarvis_rs/src/: agent.rs  agent_core.rs  app.rs  automation.rs  browser_sidecar.rs  config.rs  lib.rs  main.rs  sms.rs  speech.rs
jarvis_rs/src/audio/: recorder.rs
jarvis_rs/src/executor/: command.rs  mod.rs  system.rs  systems.rs
jarvis_rs/src/intent/: mod.rs  parser.rs  schema.rs  types.rs  validator.rs
jarvis_rs/src/llm/: mod.rs  ollama_client.rs  prompt.rs  provider.rs  schema.rs
jarvis_rs/src/logging/: logger.rs  mod.rs
jarvis_rs/src/safety/: mod.rs  risk.rs  validators.rs
jarvis_rs/src/stt/: mod.rs
scripts/: bootstrap_macos.sh  doctor.sh  run_jarvis.sh
src/: App.tsx  main.tsx
tools/: ocr.swift
voice_os/: __init__.py  agent.py  browser.py  cli.py  config.py  control.py  intent.py  llm.py  memory.py  (+6 more)
(+23 files in other folders)
