[package]
name = "jarvis_rs"
version = "0.1.0"
edition = "2021"

[features]
default = []
voice-local = ["dep:whisper-rs"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["form"] }
cpal = "0.15"
eframe = { version = "0.29", default-features = true }
egui = "0.29"
hound = "3"
thiserror = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (Ollama)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
whisper-rs = { version = "0.12", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Env file loading
dotenvy = "0.15"
